--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ sendgrid==6.9.7
 black==22.3.0
 google-cloud-secret-manager==2.9.2
 numpy==1.22.3
-pymongo==4.0.2
+pymongo[srv]==4.0.2
 jsonschema==4.4.0
 responses==0.20.0
 mongomock==4.0.0
